# prescient-sdk

./: .gitignore  .gitleaks.toml  JSII_MIGRATION_PLAN.md  Makefile  README.md  issue_timeout_http80.py  justfile  pyproject.toml
.binder/: requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yaml  deploy-book.yaml  publish-sdk.yaml  publish.yaml
docs/: _config.yml  _toc.yml  api-reference.rst  client-sdk.rst  config-api.rst  config.rst  getting-started.md  index.md  ingest-client.rst  ingest-models.rst  ingest-resources.rst  installation.md  upload.rst
docs/examples/: configuration.ipynb  ingest.ipynb  stac_search.ipynb  upload.ipynb
examples/: stac_auth.ipynb  stac_search.ipynb
prescient-sdk-ts/: .gitignore  .jsii  .npmignore  JSII_MIGRATION_PLAN.md  README.md  jest.config.js  justfile  package.json  pnpm-lock.yaml
prescient-sdk-ts/smoke-tests/: .gitignore  config.env  docker-compose.yml
prescient-sdk-ts/smoke-tests/docker/: Dockerfile.dotnet  Dockerfile.go  Dockerfile.java  (+1 more)
prescient-sdk-ts/src/: client.ts  index.ts  settings.ts  types.ts  upload.ts
prescient_sdk/: __init__.py  _logging.py  client.py  config.py  ingest.py  ingest_client.py  ingest_models.py  ingest_resources.py  upload.py
smoke-tests/: docker-compose.yml
smoke-tests/dotnet/: smoke.csproj
smoke-tests/go/: go.sum  main.go
smoke-tests/java/: pom.xml
smoke-tests/js/: smoke.js
smoke-tests/python/: smoke.py
tests/: conftest.py  test_client.py  test_ingest.py  test_ingest_client.py  test_ingest_resources.py  test_logging.py  test_upload.py  upload.ipynb
(+13 files in other folders)
