[project]
name = "prescient-sdk"
version = "0.1.8"
description = "A Python SDK for integrating with Prescient services"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.35.19",
    "msal>=1.31.0",
    "pydantic-settings>=2.5.2",
]

[project.urls]
Homepage = "https://sparkgeo.github.io/prescient-sdk/"
Repository = "https://github.com/sparkgeo/prescient-sdk"
Issues = "https://github.com/sparkgeo/prescient-sdk/issues"

[tool.uv]
dev-dependencies = [
  "numpy >1.24.4",
  "jupyter>=1.1.1",
  "pystac-client>=0.7.6",
  "pytest>=8.3.3",
  "ruff>=0.6.5",
  "pytest-mock>=3.14.0",
  "matplotlib>=3.9.2",
  "jupyter-book>=1.0.2",
  "rasterio>=1.3.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
